[package]
name = "kroeg-server"
version = "0.1.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-preview = "0.3.0-alpha.18"
futures-timer = "0.3.0"
http-service = "0.3.1"

jsonld = { path = "../jsonld-rs" }
kroeg-tap = { path = "../tap" }
kroeg-activitypub = { path = "../activitypub" }

async-std = "0.99"
async-trait = "0.1"

surf = "1.0"
url = "2.1"
toml = "0.4"
dotenv = "0.9.0"
chashmap = "2.2.0"
lazy_static = "1.0"
http = "0.1.18"
openssl = "0.10"
base64 = "0.9"
sha2 = "0.7"
